feat(task): add validation, update migrations, and unify endpoints
- add new validation to Task domain
- add new migration scripts
- remove newSingleChoice endpoint
- remove newMultipleChoice endpoint
- refactor TaskController into a single unified endpoint