@@ -1,38 +1,36 @@
 package br.com.alura.AluraFake.domain.task.validator;
 
-import br.com.alura.AluraFake.course.dto.TaskDTO;
-import br.com.alura.AluraFake.domain.rules.Rule;
+import br.com.alura.AluraFake.domain.course.dto.TaskDTO;
+import br.com.alura.AluraFake.domain.task.rules.TaskRule;
 import br.com.alura.AluraFake.domain.task.error.TaskValidationException;
 import br.com.alura.AluraFake.domain.task.error.ValidationError;
-import br.com.alura.AluraFake.task.Type;
 import br.com.alura.AluraFake.util.TaskTypeAllowed;
 import org.springframework.stereotype.Component;
 
-import java.net.Proxy;
-import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Component
-public class Validator {
+public class TaskValidator {
 
-    private final List<Rule> rules;
+    private final List<TaskRule> taskRules;
 
-    public Validator(List<Rule> rules) {
-        this.rules = rules;
+    public TaskValidator(List<TaskRule> taskRules) {
+        this.taskRules = taskRules;
     }
 
     public List<ValidationError> validate(TaskDTO task) {
-        return rules.stream()
+        List<ValidationError> result = taskRules.stream()
                 .filter(rule -> {
                     TaskTypeAllowed annotation = rule.getClass().getAnnotation(TaskTypeAllowed.class);
                     return annotation == null ||
-                            Stream.of(annotation.value()).map(Type::name)
-                            .collect(Collectors.toSet())
-                            .contains(task.getType());
+                            List.of(annotation.value()).contains(task.getType());
                 })
                 .flatMap(rule -> rule.validate(task).stream())
-                .collect(Collectors.toList());
+                .toList();
+
+        if (!result.isEmpty()) {
+            throw new TaskValidationException(result);
+        }
+        return result;
     }
 }
